<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@color/purple_900"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_purple"
        android:padding="12dp"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnViewLeaderboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_purple"
        android:padding="12dp"
        android:text="@string/view_leaderboard"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>
